--- a/package.json
+++ b/package.json
@@ -1,33 +1,23 @@
 {
-  "name": "devclub-cadastro-usuarios",
-  "private": true,
-  "version": "0.0.0",
+  "name": "conceitos-node",
+  "version": "1.0.0",
+  "description": "Esse projeto é um conceito básico para entender melhor o NODE",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "node --watch server.js",
+    "start": "node server.js"
   },
+  "author": "Vanessa Sychoski Soares",
+  "license": "ISC",
+  "keywords": [],
   "dependencies": {
-    "axios": "^1.7.7",
+    "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "styled-components": "^6.1.13"
+    "express": "^4.21.1",
+    "mongodb": "^6.10.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react": "^7.37.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "prisma": "^5.21.1"
   }
 }
